# moderntensor

./: .cleanup_plan.txt  .env.example  .gitignore  AI_ML_IMPLEMENTATION_GUIDE.md  AI_ML_IMPROVEMENTS_SUMMARY_VI.md  ARCHITECTURE_ANALYSIS_SUMMARY.md  BAOCAO_TONG_KET.md  BAO_CAO_HOAN_THANH_THANG2.md  BITTENSOR_COMPARISON_AND_ROADMAP.md  BITTENSOR_VS_MODERNTENSOR_COMPARISON.md  BLOCKCHAIN_ARCHITECTURE_DIAGRAM.md  BO_SUNG_SDK_LUXTENSOR.md  CARDANO_DEPRECATED.md  CARDANO_DEPRECATION_NOTICE.md  CARDANO_MIGRATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLI_REVIEW_REPORT.md  CODE_CLEANUP_PLAN.md  COMPLETE_AI_ML_IMPLEMENTATION.md  COMPLETE_SUMMARY.md  COMPONENT_MIGRATION_PLAN.md  CONSENSUS_REVIEW.md  CONSENSUS_REVIEW_FINDINGS.md  CONSENSUS_REVIEW_README.md  CONSENSUS_REVIEW_SUMMARY.md  CONTRIBUTING.md  CURRENT_SDK_STATUS_ASSESSMENT_VI.md  DATA_SYNC_SUMMARY_VI.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  END_TO_END_TESTING.md  EVM_INTEGRATION_SUMMARY.md  EXECUTIVE_SUMMARY_GO_DECISION.md  FINAL_ASSESSMENT.md  FUTURE_ENHANCEMENTS_IMPLEMENTATION.md  HUONG_DAN_NHANH_SDK_2026.md  IMPLEMENTATION_COMPLETE.md  (+168 more)
indexer/: Cargo.toml  README.md  check.txt  check_errors.txt
indexer/src/: decoder.rs  error.rs  graphql.rs  lib.rs  listener.rs  main.rs  metrics.rs  models.rs  storage.rs
luxtensor/: .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  Cargo.toml  DATA_SYNC_TEST_GUIDE.md  Dockerfile.rust  ECONOMIC_AUDIT_REPORT.md  HUONG_DAN_CHAY_NHIEU_NODE.md  IMPLEMENTATION_GUIDE.md  LICENSE  MIGRATION_GUIDE.md  MULTI_NODE_SETUP_GUIDE.md  NODE_SYNC_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_INDEX.md  QUICK_START_3_NODES.md  README.md  REMOTE_DEPLOYMENT_GUIDE.md  SECURITY_AUDIT_PREP.md  SECURITY_AUDIT_SCRIPTS.md  STORAGE_AUDIT_REPORT.md  after_return.txt  audit_scan.py  benchmark_16gb.txt  benchmark_64threads.txt  benchmark_atomic.txt  benchmark_high.txt  build2.txt  build_atomic.txt  build_clean.txt  build_error.txt  build_errors.txt  build_faucet.txt  build_faucet2.txt  build_faucet3.txt  build_faucet4.txt  build_faucet5.txt  build_faucet6.txt  build_final.txt  build_full.txt  (+69 more)
luxtensor/.cargo/: config.toml  deny.toml
luxtensor/.github/workflows/: ci.yml
luxtensor/consensus/: Cargo.toml
luxtensor/consensus/src/: fork_choice.rs  lib.rs  pos.rs
luxtensor/contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
luxtensor/contracts/cache/: solidity-files-cache.json
luxtensor/contracts/scripts/: deploy-direct.js  execute-tge-direct.js
luxtensor/contracts/src/: GradientAggregator.sol  MDTStaking.sol  MDTToken.sol  MDTVesting.sol  SimpleStorage.sol  TrainingEscrow.sol
luxtensor/core/: Cargo.toml
luxtensor/core/src/: block.rs  crypto.rs  errors.rs  lib.rs  state.rs  transaction.rs  types.rs  validation.rs
luxtensor/crates/: find_unwraps.py  unwrap_scan.txt
luxtensor/crates/luxtensor-api/: Cargo.toml
luxtensor/crates/luxtensor-cli/: Cargo.toml
luxtensor/crates/luxtensor-consensus/: Cargo.toml  SECURITY_AUDIT_REPORT.md
luxtensor/crates/luxtensor-contracts/: Cargo.toml
luxtensor/crates/luxtensor-core/: Cargo.toml
luxtensor/crates/luxtensor-crypto/: Cargo.toml
luxtensor/crates/luxtensor-fuzz/: Cargo.toml  FUZZ_TESTING.md
luxtensor/crates/luxtensor-guest/: Cargo.toml
luxtensor/crates/luxtensor-hnsw/: Cargo.toml
luxtensor/crates/luxtensor-indexer/: Cargo.toml
luxtensor/crates/luxtensor-methods/: Cargo.toml
luxtensor/crates/luxtensor-network/: Cargo.toml
luxtensor/crates/luxtensor-node/: Cargo.toml
luxtensor/crates/luxtensor-oracle/: .env.example  Cargo.toml  errors.txt  errors2.txt  errors3.txt  errors4.txt  errors5.txt
luxtensor/crates/luxtensor-rpc/: Cargo.toml  SECURITY_AUDIT_REPORT.md
luxtensor/crates/luxtensor-storage/: Cargo.toml
luxtensor/crates/luxtensor-tests/: Cargo.toml  data_sync_integration_test.rs  integration_tests.rs
luxtensor/crates/luxtensor-types/: Cargo.toml
luxtensor/crates/luxtensor-zkvm/: Cargo.toml
luxtensor/data2/db/: 000042.sst  000043.sst  000050.sst  000051.sst  000058.sst  000059.sst  000066.sst  000067.sst  000072.sst  000073.sst  IDENTITY  LOG  LOG.old.1771762338882958  LOG.old.1771762996516411  LOG.old.1771763610169561  LOG.old.1771763940829369  MANIFEST-000069  OPTIONS-000071
luxtensor/data2/metagraph/: IDENTITY  LOG  LOG.old.1771762338975187  LOG.old.1771762996601388  LOG.old.1771763610251544  LOG.old.1771763940921718  MANIFEST-000037  OPTIONS-000039
luxtensor/data3/db/: 000040.sst  000041.sst  000042.sst  000043.sst  000044.sst  000045.sst  IDENTITY  LOG  LOG.old.1771773128462909  MANIFEST-000047
luxtensor/docs/: AI_PRECOMPILES.md  MONITORING_SETUP.md  PAYMENT_ESCROW.md  RECOVERY_PROCEDURES.md  RPC_REFERENCE.md  SECURITY_AUDIT_GUIDE.md  TROUBLESHOOTING.md  VALIDATOR_SETUP.md
luxtensor/examples/: README.md  data_sync_demo.rs  full_transaction_example.rs  smart_contract_example.rs
luxtensor/monitoring/: grafana_dashboard.json  prometheus.yml
luxtensor/network/: Cargo.toml
luxtensor/node/: Cargo.toml
luxtensor/node1/: config.toml  stdout.txt
luxtensor/node2/: config.toml
luxtensor/node3/: config.toml
luxtensor/primitives/: Cargo.toml
luxtensor/rpc/: Cargo.toml
luxtensor/scripts/: E2E_TEST_README.md  attack_sim.py  benchmark.py  benchmark_tps.py  blockchain_scanner_test.py  check-nodes-windows.ps1  comprehensive_test.py  consensus_test.py  contract_security_test.py  debug_signing.py  demo_network.py  deploy_interact.py  deploy_node.sh  deploy_real_contract.py  deploy_testnet.sh  e2e_full_test.py  e2e_output.txt  e2e_vesting_test.py  full_integration_test.py  generate_validator_keys.py  live_integration_tests.py  log_output.txt  multi_node_test.py  quick_log_check.py  run_tests.ps1  scan_output.txt  start-nodes-windows.ps1  stress_test.py  test_gpu_detection.py  test_nodes.py  test_staking_lock.py  transaction_scanner.py
luxtensor/storage/: Cargo.toml
luxtensor/target_test/: .rustc_info.json
luxtensor/test_sync/: config.toml
luxtensor/testnet/: Cargo.toml
luxtensor/tests/: federated_learning_test.py  integration_test.py
(+1444 files in other folders)
