[workspace]
members = [
    "crates/luxtensor-core",
    "crates/luxtensor-crypto",
    "crates/luxtensor-consensus",
    "crates/luxtensor-network",
    "crates/luxtensor-storage",
    "crates/luxtensor-rpc",
    "crates/luxtensor-node",
    "crates/luxtensor-cli",
    "crates/luxtensor-tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sonson0910/luxtensor"
authors = ["LuxTensor Team <sonlearn155@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery", "global-context", "rand-std"] }
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "gossipsub", "mdns", "yamux", "identify"] }

# Storage
rocksdb = "0.21"

# RPC
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
hex = "0.4"
bytes = "1.5"
parking_lot = "0.12"

# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
