[package]
name = "luxtensor-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "luxtensor"
path = "src/main.rs"

[dependencies]
luxtensor-core = { path = "../core" }
luxtensor-consensus = { path = "../consensus" }
luxtensor-network = { path = "../network" }
luxtensor-storage = { path = "../storage" }
luxtensor-rpc = { path = "../rpc" }

tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
