[package]
name = "luxtensor-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
luxtensor-types = { workspace = true }
luxtensor-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
