[package]
name = "luxtensor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "luxtensor"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { workspace = true }
rpassword = "7"
scrypt = "0.11"
aes = "0.8"
ctr = "0.9"
rand = { workspace = true }

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }
