[package]
name = "luxtensor-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# EVM integration
revm = "14.0"
revm-primitives = "10.0"

sha3 = { workspace = true }
bincode = { workspace = true }

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

[dev-dependencies]
proptest = { workspace = true }
