[package]
name = "luxtensor-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

# EVM integration
revm = { workspace = true }
revm-primitives = { workspace = true }

sha3 = { workspace = true }
bincode = { workspace = true }

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }
luxtensor-storage = { path = "../luxtensor-storage" }

[features]
default = []
# Enable to remove `fund_account` from the public API (security hardening).
restrict_fund = []

[dev-dependencies]
proptest = { workspace = true }
