[package]
name = "luxtensor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }

luxtensor-crypto = { path = "../luxtensor-crypto" }

[dev-dependencies]
proptest = { workspace = true }
