[package]
name = "luxtensor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
sha3 = "0.10"
tracing = { workspace = true }

luxtensor-crypto = { path = "../luxtensor-crypto" }
luxtensor-hnsw = { path = "../luxtensor-hnsw" }

[dev-dependencies]
proptest = { workspace = true }
