[package]
name = "luxtensor-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sha2 = { workspace = true }
sha3 = { workspace = true }
secp256k1 = { workspace = true }
k256 = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
