# This crate is intentionally a STANDALONE workspace, excluded from the main
# LuxTensor workspace. RISC Zero guest programs must be compiled separately
# with the RISC-V cross-compiler toolchain (rzup) and cannot share workspace
# settings with the host-side crates.

[package]
name = "luxtensor-guest"
version = "0.1.0"
edition = "2021"
description = "RISC Zero guest program for LuxTensor AI inference verification"
authors = ["LuxTensor Team"]
license = "MIT"

[workspace]

[dependencies]
# RISC Zero guest environment (no_std compatible)
risc0-zkvm = { version = "3.0", default-features = false, features = ["guest"] }
