[package]
name = "luxtensor-indexer"
version = "0.1.0"
edition = "2021"
description = "Blockchain indexer for Luxtensor with PostgreSQL storage and GraphQL API"
authors = ["ModernTensor Team"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# GraphQL
async-graphql = { version = "7.0", features = ["chrono"] }
async-graphql-axum = "7.0"
axum = { version = "0.7", features = ["ws"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"

# Internal dependencies
luxtensor-core = { path = "../luxtensor-core" }

[dev-dependencies]
tokio-test = "0.4"
