[package]
name = "luxtensor-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
luxtensor-types = { workspace = true }
luxtensor-core = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
