[package]
name = "luxtensor-network"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
sha3 = "0.10"

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

[features]
legacy = []

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
