[package]
name = "luxtensor-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "luxtensor-node"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-consensus = { path = "../luxtensor-consensus" }
luxtensor-network = { path = "../luxtensor-network" }
luxtensor-storage = { path = "../luxtensor-storage" }
luxtensor-rpc = { path = "../luxtensor-rpc" }
