[package]
name = "luxtensor-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "luxtensor-node"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
sha3 = { workspace = true }
dashmap = { workspace = true }

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }
luxtensor-consensus = { path = "../luxtensor-consensus" }
luxtensor-network = { path = "../luxtensor-network" }
luxtensor-storage = { path = "../luxtensor-storage" }
luxtensor-rpc = { path = "../luxtensor-rpc" }
luxtensor-contracts = { path = "../luxtensor-contracts" }
luxtensor-oracle = { path = "../luxtensor-oracle" }
luxtensor-zkvm = { path = "../luxtensor-zkvm" }
rayon = { workspace = true }

# jemalloc for high-performance concurrent allocation (Linux/macOS only)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
legacy = ["luxtensor-network/legacy"]

[dev-dependencies]
tempfile = "3.8"
