[package]
name = "luxtensor-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
dotenv = "0.15"

# Internal dependencies
luxtensor-core = { path = "../luxtensor-core" }
luxtensor-zkvm = { path = "../luxtensor-zkvm" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

# RISC Zero methods (provides guest ELF binary).
# Optional: only needed when risc0 feature is enabled.
# Requires RISC Zero toolchain installed via `rzup install`.
luxtensor-methods = { path = "../luxtensor-methods", optional = true }

[features]
default = []
# Enable real RISC Zero STARK proof generation.
# Requires: `rzup install` (one-time RISC Zero toolchain setup).
# When disabled, the oracle uses dev-mode proofs.
risc0 = ["luxtensor-zkvm/risc0", "dep:luxtensor-methods"]
