[package]
name = "luxtensor-oracle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
# DEPRECATED: ethers is unmaintained. Migrate to `alloy` crate.
# Tracking issue: https://github.com/gakonst/ethers-rs/issues/2667
ethers = { version = "2.0", features = ["ws", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
hex = { workspace = true }

# Internal dependencies
luxtensor-core = { path = "../luxtensor-core" }
luxtensor-zkvm = { path = "../luxtensor-zkvm" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

# RISC Zero methods (provides guest ELF binary).
# Optional: only needed when risc0 feature is enabled.
# Requires RISC Zero toolchain installed via `rzup install`.
luxtensor-methods = { path = "../luxtensor-methods", optional = true }

[features]
default = []
# Enable real RISC Zero STARK proof generation.
# Requires: `rzup install` (one-time RISC Zero toolchain setup).
# When disabled, the oracle uses dev-mode proofs.
risc0 = ["luxtensor-zkvm/risc0", "dep:luxtensor-methods"]
