[package]
name = "luxtensor-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-http-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
sha3 = "0.10"
k256 = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
alloy-rlp = { workspace = true }  # RLP encoding for Ethereum transaction format
lazy_static = "1.4"

# WebSocket support
tokio-tungstenite = "0.21"
futures = { workspace = true }
tracing = { workspace = true }

luxtensor-core = { path = "../luxtensor-core" }
luxtensor-storage = { path = "../luxtensor-storage" }
luxtensor-consensus = { path = "../luxtensor-consensus" }
luxtensor-crypto = { path = "../luxtensor-crypto" }
luxtensor-contracts = { path = "../luxtensor-contracts" }
luxtensor-oracle = { path = "../luxtensor-oracle" }
luxtensor-zkvm = { path = "../luxtensor-zkvm" }

[features]
reqwest = []

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.8"
rocksdb = { workspace = true }
proptest = { workspace = true }
