[package]
name = "luxtensor-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
luxtensor-types = { workspace = true }
luxtensor-core = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
