[package]
name = "luxtensor-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
tokio = { workspace = true }
luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }
luxtensor-storage = { path = "../luxtensor-storage" }
luxtensor-network = { path = "../luxtensor-network" }
tempfile = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "performance_benchmarks"
harness = false

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "data_sync_integration_test"
path = "data_sync_integration_test.rs"

[lib]
name = "luxtensor_tests"
path = "src/lib.rs"
