[package]
name = "luxtensor-zkvm"
version = "0.4.0"
edition = "2021"
description = "Zero-Knowledge Virtual Machine integration for LuxTensor blockchain"
authors = ["LuxTensor Team"]
license = "MIT"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Internal dependencies
luxtensor-core = { path = "../luxtensor-core" }
luxtensor-crypto = { path = "../luxtensor-crypto" }

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# Logging
tracing = "0.1"

# Utils
hex = "0.4"
num_cpus = "1.16"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = []
# Enable when RISC Zero toolchain is installed
risc0 = []
cuda = []
metal = []
groth16 = []
